--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Mon May 27 09:09:11 CST 2013
+#Thu Jun 06 13:52:06 CST 2013
 eclipse.preferences.version=1
+encoding//WebRoot/css/login.css=GBK
 encoding//WebRoot/css/style.css=GBK
